# genesight

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  mise.toml
crates/genesight-cli/: Cargo.toml
crates/genesight-cli/src/: main.rs
crates/genesight-cli/src/tui/: app.rs  event.rs  mod.rs  ui.rs
crates/genesight-core/: Cargo.toml
crates/genesight-core/src/: lib.rs
crates/genesight-core/src/allele/: mod.rs  strand.rs
crates/genesight-core/src/annotator/: clinical.rs  frequency.rs  mod.rs  pharmacogenomics.rs  traits.rs
crates/genesight-core/src/db/: clinvar.rs  dbsnp.rs  gwas.rs  mod.rs  pharmgkb.rs  snpedia.rs  variants.rs
crates/genesight-core/src/models/: annotation.rs  assembly.rs  confidence.rs  config.rs  mod.rs  report.rs  variant.rs
crates/genesight-core/src/normalizer/: mod.rs
crates/genesight-core/src/parser/: ancestry.rs  mod.rs  twentythreeandme.rs  vcf.rs
crates/genesight-core/src/pgx/: definitions.rs  diplotype.rs  mod.rs  phasing.rs  phenotype.rs
crates/genesight-core/src/report/: html.rs  json.rs  markdown.rs  mod.rs
crates/genesight-core/src/scorer/: mod.rs  monogenic.rs  pharmaco.rs  polygenic.rs  traits.rs
crates/genesight-gui/: Cargo.toml
crates/genesight-gui/src/: app.rs  export.rs  main.rs  state.rs  theme.rs
crates/genesight-gui/src/views/: dashboard.rs  detail.rs  mod.rs  progress.rs  welcome.rs
crates/genesight-server/: Cargo.toml
crates/genesight-server/src/: main.rs
data/fetch/: fetch_clinvar.sh  fetch_dbsnp.sh  fetch_gwas.sh  fetch_pharmgkb.sh  fetch_snpedia.py
data/import/: import_clinvar.py  import_gwas.py
data/schema/: schema.sql
data/seed/: build_seed_db.py
docs/: ARCHITECTURE.md  CLAUDE.md  CONFIDENCE_TIERS.md  DATA_SOURCES.md  LICENSES.md  PGP_TEST_DATA.md  PIPELINE_OVERHAUL.md  README.md
docs/audit/: README.md
docs/audit/critical/: C1-pgx-no-allele-check.md  C2-pgx-pipeline-dead-code.md  C3-clinvar-star-mapping.md  C4-pgx-schema-mismatch.md
docs/audit/high/: H1-clinvar-no-inheritance-mode.md  H2-clinvar-germline-import.md  H3-confirmation-urgency-not-rendered.md  H4-fda-pgx-disclaimer.md  H5-gwas-or-interpretation.md  H6-pgx-strand-normalization.md  H7-prs-not-implemented.md  H8-assembly-no-enforcement.md
docs/audit/medium/: M1-gwas-or-inversion.md  M2-dtc-context-not-rendered.md  M3-clinvar-allele-fallback.md
docs/audit/plans/: WS1-pgx-pipeline.md  WS2-clinvar-scoring.md  WS3-reporting-gwas.md
docs/audit/test-results/: huAE4518-analysis.md
docs/research/: annotation_pipeline_research.md  deep-research-report.md  genomik-praxisprimer.md  research_quellen.md
tests/fixtures/: sample.vcf  sample_23andme.txt  sample_ancestry.txt
