[package]
name = "genesight-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
default-run = "genesight-gui"

[[bin]]
name = "genesight-gui"
path = "src/main.rs"

[dependencies]
genesight-core = { path = "../genesight-core" }
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts",
    "wgpu",
] }
egui = "0.31"
egui_extras = { version = "0.31", features = ["image"] }
rusqlite = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = "6"
rfd = "0.15"
printpdf = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
